fix hover color issue on mobile

--- a/style.css
+++ b/style.css
@@ -82,20 +82,20 @@ ul {
     pointer-events: none; /* Prevent interaction with disabled items */
   }
   
-  ul li:hover:not(:disabled) {
+  ul li:hover {
     background-color: #b5b5b5;
   }
   
 /* U-Bahn Line Colors */
-.U1 { background-color: rgb(125, 172, 76); } 
-.U2 { background-color: rgb(219, 66, 31); }
-.U3 { background-color: rgb(24, 104, 61); }
-.U4 { background-color: rgb(240, 215, 36); color: black; }
-.U5 { background-color: rgb(126, 83, 48); }
-.U6 { background-color: rgb(140, 109, 171); }
-.U7 { background-color: rgb(82, 140, 186); }
-.U8 { background-color: rgb(48, 78, 130); }
-.U9 { background-color: rgb(244, 120, 30); }
+.U1, .U1:active { background-color: rgb(125, 172, 76); } 
+.U2, .U2:active { background-color: rgb(219, 66, 31); }
+.U3, .U3:active { background-color: rgb(24, 104, 61); }
+.U4, .U4:active { background-color: rgb(240, 215, 36); color: black; }
+.U5, .U5:active { background-color: rgb(126, 83, 48); }
+.U6, .U6:active { background-color: rgb(140, 109, 171); }
+.U7, .U7:active { background-color: rgb(82, 140, 186); }
+.U8, .U8:active { background-color: rgb(48, 78, 130); }
+.U9, .U9:active { background-color: rgb(244, 120, 30); }
 
 .a-to-b-stations {
     margin-top: 10px;
@@ -125,5 +125,8 @@ ul {
 
   .green {
     color: #22cc22;  
+  }
 
+  .red {
+    color: #cc2222;  
   }
